--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,7 +4,7 @@
     <NoWarn>CS1591;CS0649</NoWarn>
     <Version>0.2.0</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
-    <PackageTags>Pandoc, Verify</PackageTags>
+    <PackageTags>Pandoc, Document, Conversion</PackageTags>
     <Description>Conversion of document via Pandoc.</Description>
   </PropertyGroup>
 </Project>
