--- a/src/PandocNet/Pandoc.csproj
+++ b/src/PandocNet/Pandoc.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nullable" Version="1.3.0" Condition="$(TargetFramework) == 'net48'" PrivateAssets="all" />
