--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -5,35 +5,17 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Argon" Version="0.1.0-beta.16" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.0" PrivateAssets="all" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
-    <PackageReference Include="Verify.NUnit" Version="17.8.1" />
+    <PackageReference Include="Verify.NUnit" Version="18.0.0-beta.3" />
     <ProjectReference Include="..\PandocNet\Pandoc.csproj" />
     <PackageReference Include="ProjectDefaults" Version="1.0.80" PrivateAssets="all" />
 
     <None Update="sample.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Tests.Content.verified.html">
-      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
-      <DependentUpon>Tests.cs</DependentUpon>
-    </None>
-    <None Update="Tests.Files.verified.html">
-      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
-      <DependentUpon>Tests.cs</DependentUpon>
-    </None>
-    <None Update="Tests.RawFiles.verified.html">
-      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
-      <DependentUpon>Tests.cs</DependentUpon>
-    </None>
-    <None Update="Tests.Text.verified.html">
-      <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
-      <DependentUpon>Tests.cs</DependentUpon>
     </None>
   </ItemGroup>
 </Project>
