--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Argon" Version="0.1.0-beta.18" />
+    <PackageReference Include="Argon" Version="0.1.0" />
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="24.5.0" PrivateAssets="all" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="Verify.NUnit" Version="18.0.0-beta.21" />
+    <PackageReference Include="Verify.NUnit" Version="18.0.0-beta.23" />
     <ProjectReference Include="..\PandocNet\Pandoc.csproj" />
     <PackageReference Include="ProjectDefaults" Version="1.0.80" PrivateAssets="all" />
 
