--- a/src/PandocNet/Pandoc.csproj
+++ b/src/PandocNet/Pandoc.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Nullable" Version="1.3.0" Condition="$(TargetFramework) == 'net48'" PrivateAssets="all" />
+    <PackageReference Include="Polyfill" Version="0.14.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" Condition="$(TargetFramework) == 'net48'" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.89" PrivateAssets="all" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.90" PrivateAssets="all" />
     <PackageReference Include="CliWrap" Version="3.6.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
     <PackageReference Include="Replicant" Version="1.2.0" />
