--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -7,5 +7,6 @@
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <PackageTags>Pandoc, Document, Conversion</PackageTags>
     <Description>Conversion of document via Pandoc.</Description>
+    <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
   </PropertyGroup>
 </Project>
