--- a/src/PandocNet/Pandoc.csproj
+++ b/src/PandocNet/Pandoc.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ProjectDefaults" Version="1.0.127" PrivateAssets="all" />
-    <PackageReference Include="CliWrap" Version="3.6.6" />
-    <PackageReference Include="Replicant" Version="2.0.1" />
+    <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
+    <PackageReference Include="CliWrap" />
+    <PackageReference Include="Replicant" />
   </ItemGroup>
 </Project>
