refs or cleanup

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,9 +8,8 @@
     <PackageTags>Pandoc, Document, Conversion</PackageTags>
     <Description>Conversion of document via Pandoc.</Description>
     <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
-    <NuGetAuditMode>all</NuGetAuditMode>
-    <NuGetAuditLevel>low</NuGetAuditLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
   </PropertyGroup>
 </Project>
