--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,7 +4,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Argon" Version="0.26.0" />
+    <PackageVersion Include="Argon" Version="0.27.0" />
     <PackageVersion Include="CliWrap" Version="3.8.2" />
     <PackageVersion Include="MarkdownSnippets.MsBuild" Version="27.0.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
@@ -13,5 +13,6 @@
     <PackageVersion Include="ProjectDefaults" Version="1.0.148" />
     <PackageVersion Include="Replicant" Version="2.0.3" />
     <PackageVersion Include="Verify.Nunit" Version="28.14.0" />
+    <PackageVersion Include="Verify.NUnit" Version="28.15.0" />
   </ItemGroup>
 </Project>
