--- a/src/.gitattributes
+++ b/src/.gitattributes
@@ -7,9 +7,9 @@
 *.pptx binary
 *.ppt binary
 
+*.verified.html text eol=lf working-tree-encoding=UTF-8
+*.verified.md text eol=lf working-tree-encoding=UTF-8
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
-*.verified.xml text eol=lf working-tree-encoding=UTF-8
-*.verified.json text eol=lf working-tree-encoding=UTF-8
 
 .editorconfig text eol=lf working-tree-encoding=UTF-8
 Shared.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
