--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -13,5 +13,6 @@
     <PackageVersion Include="ProjectDefaults" Version="1.0.152" />
     <PackageVersion Include="Replicant" Version="2.0.3" />
     <PackageVersion Include="Verify.NUnit" Version="30.0.0" />
+    <PackageVersion Include="Microsoft.Sbom.Targets" Version="3.1.0" />
   </ItemGroup>
 </Project>
