refs and cleanup

--- a/src/PandocNet/Pandoc.csproj
+++ b/src/PandocNet/Pandoc.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="CliWrap" />
     <PackageReference Include="Replicant" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
   </ItemGroup>
 </Project>
