--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -6,7 +6,10 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 init:
-  - choco install pandoc
+- pwsh: |
+    if ($isWindows) {
+      choco install pandoc
+    }
 build_script:
 - pwsh: |
     if ($isWindows) {
