--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -14,6 +14,9 @@ init:
 #    if ($isMacOS) {
 #       brew install pandoc
 #    }
+    if ($isLinux) {
+       brew install pandoc
+    }
 build_script:
 - pwsh: |
     if ($isWindows) {
