--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -12,7 +12,7 @@ init:
       choco install pandoc
     }
     if ($isLinux) {
-      sudo brew install pandoc
+      sudo apt-get install pandoc
     }
 #    if ($isMacOS) {
 #       brew install pandoc
