--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -1,14 +1,38 @@
-image: Visual Studio 2022
+image:
+  - Visual Studio 2022
+#  - macOS
+  - Ubuntu
 environment:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 init:
-  - choco install pandoc
+- pwsh: |
+    if ($isWindows) {
+      choco install pandoc
+    }
+    if ($isLinux) {
+      sudo apt-get -yq install pandoc
+    }
+#    if ($isMacOS) {
+#       brew install pandoc
+#    }
 build_script:
 - pwsh: |
-    Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
-    ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+    if ($isWindows) {
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
+      ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+    }
+    if ($isMacOS) {
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
+      sudo chmod u+x dotnet-install.sh
+      sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/local/share/dotnet'
+    }
+    if ($isLinux) {
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
+      sudo chmod u+x dotnet-install.sh
+      sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
+    }
 - dotnet build src --configuration Release
 - dotnet test src --configuration Release --no-build --no-restore
 test: off
