--- a/src/.gitattributes
+++ b/src/.gitattributes
@@ -13,4 +13,5 @@
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 
 .editorconfig text eol=lf working-tree-encoding=UTF-8
-Shared.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+*.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+*.slnx.DotSettings text eol=lf working-tree-encoding=UTF-8
