--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -14,6 +14,6 @@
     <PackageVersion Include="Replicant" Version="2.0.5" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.NUnit" Version="31.7.2" />
-    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.3" />
+    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.4" />>
   </ItemGroup>
 </Project>
