--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -11,6 +11,7 @@
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.2.0" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.163" />
+    <PackageVersion Include="ProjectFiles" Version="0.1.2" />
     <PackageVersion Include="Replicant" Version="2.0.5" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.NUnit" Version="31.7.2" />
