--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="ProjectFiles" />
     <PackageReference Include="Verify.DiffPlex" />
     <PackageReference Include="Verify.NUnit " />
     <ProjectReference Include="..\PandocNet\Pandoc.csproj" />
