--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,17 +4,17 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Argon" Version="0.33.0" />
+    <PackageVersion Include="Argon" Version="0.33.3" />
     <PackageVersion Include="CliWrap" Version="3.10.0" />
-    <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0-beta.25" />
+    <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="6.1.0" />
-    <PackageVersion Include="ProjectDefaults" Version="1.0.171" />
+    <PackageVersion Include="ProjectDefaults" Version="1.0.172" />
     <PackageVersion Include="ProjectFiles" Version="0.5.0" />
     <PackageVersion Include="Replicant" Version="2.0.6" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
-    <PackageVersion Include="Verify.NUnit" Version="31.11.0" />
+    <PackageVersion Include="Verify.NUnit" Version="31.12.0" />
     <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.5" />
   </ItemGroup>
 </Project>
